# mapshaders

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SConstruct  SCsub  register_types.cpp  register_types.h
.github/workflows/: main.yml
demo/: RenderUtil.gd  areas.gd  buildings.gd  burj.osm  coastline.gd  download_map.gd  eiffel.osm  export_presets.cfg  ground.gd  hipped.osm  hospital.osm  icon.svg.import  indo.osm  parsed.sgdmap  place_name_button.gd  project.godot  putney.osm  roads.gd  scene.tscn  simplified_land_polygons.shx  test.gd  tower.osm  trees.osm  water.gdshader  water2.gdshader  zfighting.gdshader
demo/addons/streetsgd/: plugin.cfg
demo/assets/ground/: Ground_B.png.import  Ground_N.png.import  Ground_R.png.import  ground.material  ground.tres
demo/assets/water/: Caustic.png.import  Foam.png.import  Water.gdshader  Water.material  Water_N_A.png.import  Water_N_B.png.import  Water_UV.png.import  water.tres
element/: SGNode.cpp  SGNode.h  SGWay.cpp  SGWay.h
import/: FileAccessMemoryResizable.cpp  FileAccessMemoryResizable.h  GeoMap.cpp  GeoMap.h  SGImport.cpp  SGImport.h
import/osm_parser/: NodeParser.h  OSMParser.cpp  OSMParser.h  WayParser.h
src/: CMakeLists.txt  Version.h.in  register_types.cpp  register_types.h
src/element/: SGNode.cpp  SGNode.h  SGWay.h
src/import/: FileAccessMemoryResizable.cpp  FileAccessMemoryResizable.h  GeoMap.cpp  GeoMap.h  Parser.cpp  Parser.h  SGImport.cpp  SGImport.h  TileMap.cpp  TileMap.h
src/import/coastline/: CoastlineParser.cpp  CoastlineParser.h
src/import/elevation/: ElevationParser.cpp  ElevationParser.h
src/import/osm_parser/: NodeParser.h  OSMHeightmap.cpp  OSMHeightmap.h  OSMModel.h  OSMModelGD.h  OSMPBFReader.h  OSMParser.cpp  OSMParser.h  OSMXMLReader.h  WayParser.h
src/import/util/: ParserOutputFile.cpp  ParserOutputFile.h  PortableByteSwap.h  ThreadPool.h
src/poly2tri/: meson.build
src/poly2tri/poly2tri/common/: dll_symbol.h
src/util/: GlobalRequirements.cpp  GlobalRequirements.h  GlobalRequirementsBuilder.cpp  GlobalRequirementsBuilder.h  PolyUtil.cpp  PolyUtil.h  Util.h
templates/: template.debug.gdextension.in  template.release.gdextension.in
tests/: test_streetsgd.h
util/: GlobalRequirements.cpp  GlobalRequirements.h  GlobalRequirementsBuilder.cpp  GlobalRequirementsBuilder.h  PolyUtil.cpp  PolyUtil.h
worldshaders/: CMakeLists.txt
worldshaders/coastline/3D/: Coastline.cpp  Coastline.h
worldshaders/common/3D/: RenderUtil3D.cpp  RenderUtil3D.h
worldshaders/elevation/3D/: HeightMap.cpp  HeightMap.h
worldshaders/osm/3D/: Areas.cpp  Areas.h  Barriers.cpp  Barriers.h  Buildings.cpp  Buildings.h  Roads.cpp  Roads.h  TreesMulti.cpp  TreesMulti.h
